fix unstuck mechanism